# bomberRoyale

./: .gitignore
BomberRoyale/: CMakeLists.txt  config.cpp  config.h  design.cpp  design.h  main.cpp
BomberRoyale/functions/animation/: animation.cpp  animation.h
BomberRoyale/functions/calculators/: baseAI.cpp  baseAI.h  bombPlacement.cpp  bombPlacement.h  playerPositions.cpp  playerPositions.h
BomberRoyale/functions/controllers/: menuControler.cpp  menuControler.h
BomberRoyale/functions/detectors/: collision.cpp  collision.h
BomberRoyale/functions/scoresystem/: scoreSystem.cpp  scoreSystem.h
BomberRoyale/gamestates/: machine.cpp  machine.h  state.h  stateGameScreen.cpp  stateGameScreen.h  stateMainMenu.cpp  stateMainMenu.h  statePauseScreen.cpp  statePauseScreen.h  stateScoreScreen.cpp  stateScoreScreen.h
BomberRoyale/gamestates/gamestatesdata/: gamescreenData.cpp  gamescreenData.h  mainmenuData.cpp  mainmenuData.h  pausescreenData.cpp  pausescreenData.h  scorescreenData.cpp  scorescreenData.h  stateData.h
BomberRoyale/gamestates/mainmenustates/: mainMenuMachine.cpp  mainMenuMachine.h
BomberRoyale/jsonobjects/: credits.cpp  credits.h  credits.json  highscore.json  highscores.cpp  highscores.h  settings.json
BomberRoyale/layers/: layers.cpp  layers.h  map.cpp  map.h
BomberRoyale/map/: newmap.json
BomberRoyale/objects/: BaseObject.cpp  BaseObject.h  Bomb.cpp  Bomb.h  Player.cpp  Player.h  object.cpp  object.h  sprite.cpp  sprite.h
BomberRoyale/objects/powerups/: basePowerUps.cpp  basePowerUps.h  bombPU.cpp  bombPU.h  powerUpBombPower.cpp  powerUpBombPower.h  powerUpHP.cpp  powerUpHP.h  powerUpSpeed.cpp  powerUpSpeed.h
